[package]
name = "day13"
version = "0.1.0"
authors = ["Atte Niemi <4998544+hur@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modinverse = "0.1.1"
num-bigint = "0.3.1"
num-traits = "0.2.14"
